[tool.poetry]
name = "linked-lobbysts"
version = "0.1.0"
description = "Explore relationships in the lobby world"
authors = ["Magdalena Surowka, Zazuko"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
sparqlkernel = "^1.3.0"
rdflib = "^5.0"
SPARQLWrapper = "^1.8.0"
ipykernel = "^5.3.4"
plotly = "^4.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
